--- a/08-menu/styles.css
+++ b/08-menu/styles.css
@@ -222,6 +222,7 @@ Menu
   max-width: 25rem;
 }
 .photo {
+  -o-object-fit: cover;
   object-fit: cover;
   height: 200px;
   border: 0.25rem solid var(--clr-gold);
