--- a/19-dark-mode/styles.css
+++ b/19-dark-mode/styles.css
@@ -10,7 +10,12 @@ Global Styles
   --clr-primary: #d23669;
   --clr-grey: #64748b;
 }
-
+.dark-theme {
+  --clr-bcg: #282c35;
+  --clr-font: #fff;
+  --clr-primary: #f978a3;
+  --clr-grey: #bbc7d9;
+}
 *,
 ::after,
 ::before {
@@ -19,8 +24,8 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-bcg);
   color: var(--clr-font);
   line-height: 1.5;
